plugins {
    id 'java'
    id 'checkstyle'
    id 'org.springframework.boot' version '3.4.2'

}

apply from: 'gradle/extensions/checkstyle.gradle'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

group = 'com.apa.clipfarmer'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

dependencies {

    // Log
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.20.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.20.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.20.0'

    // Commons
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
    implementation group: 'com.beust', name: 'jcommander', version: '1.82'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.2'
    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.36'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.36'
    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.4.2'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.18.3' //TODO delete
    implementation group: 'org.json', name: 'json', version: '20210307'

    // Spring
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '3.4.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.4.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.4.2'

    // Test
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.4.2'

    // DB
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
    implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.19'
    implementation group: 'org.mybatis', name: 'mybatis-spring', version: '3.0.4'

    // Video
    implementation 'org.bytedeco:javacv-platform:1.5.8' // Or the latest version

    // Email
    implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.1'

    // Youtube API
    implementation group: 'com.google.apis', name: 'google-api-services-youtube', version: 'v3-rev222-1.25.0'
    implementation group: 'com.google.apis', name: 'google-api-services-oauth2', version: 'v2-rev157-1.25.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'com.google.oauth-client:google-oauth-client-java6:1.34.1'
}

test {
    useJUnitPlatform()
}
